2012-05-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c (grub_jfs_data): New field caseins.
	(grub_jfs_mount): Fill caseins.
	(grub_jfs_find_file): Respect caseins.

2012-05-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Don't strrchr
	through UTF-16.

2012-05-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_find_dir): Fix error message.
	New argument origpath. All users updated.

2012-05-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (read_data): Prevent overflow.
	(read_attr): Ensure that we read start of possibly compressed block.

2012-05-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/ntfs.h (grub_ntfs_comp_table_element): New struct.
	(grub_ntfs_comp): Use grub_ntfs_comp_table_element for comp_table.
	All users updated.

2012-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am (starfield_DATA): Replace dejavu.pf2 with dejavu_10.pf2,
	dejavu_12.pf2, dejavu_14.pf2 and dejavu_16.pf2.
	(dejavu.pf2): Replace with ...
	(dejavu_10.pf2), (dejavu_12.pf2), (dejavu_14.pf2), (dejavu_16.pf2):
	this.

2012-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Add missing line.

2012-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/charset.h (GRUB_UTF16_UPPER_SURROGATE): Fix mask sizes.
	(GRUB_UTF16_LOWER_SURROGATE): Likewise.
	(grub_utf16_to_utf8): Likewise.

2012-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (scan): Don't scan device tree if
	GRUB_IEEE1275_FLAG_NO_TREE_SCANNING_FOR_DISKS is set.
	* grub-core/kern/ieee1275/cmain.c (grub_ieee1275_find_options): Set
	GRUB_IEEE1275_FLAG_NO_TREE_SCANNING_FOR_DISKS on IBM hardware.
	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_flag): New enum value
	GRUB_IEEE1275_FLAG_NO_TREE_SCANNING_FOR_DISKS.

2012-05-13  Vladimir Serbinenko  <phcoder@gmail.com>
